New features, testing and files to wrap up project

--- a/frontend/src/components/css/Song.module.css
+++ b/frontend/src/components/css/Song.module.css
@@ -6,15 +6,17 @@ img {
 }
 
 .SongDetails {
-    color: #111; 
+    color: white; 
     font-family: Verdana;
+    padding: 10px;
+    font-size: 25px;
 }
 
 .SongContainer {
     display: flex;
     flex-direction: row;
     align-items: center;
-    background-color: #EBEBEB;
+    color: #EBEBEB;
     width: 100%;
     max-width: 100%;
 }
