--- a/frontend/src/components/css/Login.module.css
+++ b/frontend/src/components/css/Login.module.css
@@ -1,7 +1,3 @@
-.Container {
-    padding: 16px;
-}
-
 .SubmitButton {
     background-color: #4cafaf;
     color: white;
@@ -33,7 +29,15 @@
 }
 
 .LoginWrapper {
-    display: inline-block;
-    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
+    height: 100%;
+    color: white;
 }
   
+.error {
+    color: red;
+}
