--- a/frontend/src/components/css/Register.module.css
+++ b/frontend/src/components/css/Register.module.css
@@ -2,7 +2,7 @@
     padding: 16px;
 }
 
-.input[type=text], .input[type=password] {
+.input[type=text], .input[type=password], .input[type=email]{
     width: 95%;
     padding: 15px;
     margin: 5px 0 22px 0;
@@ -12,7 +12,7 @@
 }
 
 /* Add a background color when the inputs get focus */
-.input[type=text]:focus, .input[type=password]:focus {
+.input[type=text]:focus, .input[type=password]:focus, .input[type=email]:focus {
     background-color: #ddd;
     outline: none;
 }
@@ -37,4 +37,19 @@
 
 .SubmitButton:hover {
     opacity:1;
+}
+
+.SubmitButton:disabled {
+    background: #dddddd;
+}
+
+.picWrapper {
+    height: 240px;
+    width: 240px;
+    border: 1px dashed black;
+}
+
+.pic {
+    width: 100%;
+    height: 100%;
 }
